# SemanticsPureTracing

./: Semantics.cabal  log  run
src/: CompTree.hs  DataDep.hs  EventForest.hs  Examples.hs  FreeVar.hs  Run.hs  Semantics.hs  Test.hs
